<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.agmgneila.ecomarket.ui.LoginFragment"
        android:label="@string/login">
        <action android:id="@+id/action_login_to_catalog"
            app:destination="@id/catalogFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.agmgneila.ecomarket.ui.RegisterFragment"
        android:label="@string/register" />
    <fragment
        android:id="@+id/catalogFragment"
        android:name="com.agmgneila.ecomarket.ui.CatalogFragment"
        android:label="@string/app_name">
        <action android:id="@+id/action_catalog_to_cart"
            app:destination="@id/cartFragment" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.agmgneila.ecomarket.ui.CartFragment"
        android:label="@string/cart" />
</navigation>

